src/snapshots/transmute__parser__tests__let_statement-dot.snap
---
source: src/parser.rs
expression: "Dot::new(&ast, &vec![]).serialize()"
---
//graphviz file
digraph ast {
ordering="out";
splines=false;
n0[label="42"][shape="plaintext"][fontcolor="black"]
n1[label="let forty_two"][shape="plaintext"][fontcolor="black"]
n1 -> n0[style="solid"][color="black"][arrowhead="none"]}
