src/snapshots/transmute__parser__tests__method_call-dot.snap
---
source: src/parser.rs
expression: "Dot::new(&ast, &vec![]).serialize()"
---
//graphviz file
digraph ast {
ordering="out";
splines=false;
n0[label="obj"][shape="plaintext"][fontcolor="blue"]
n1[label="f()"][shape="plaintext"][fontcolor="blue"]
n2[label="."][shape="plaintext"][fontcolor="black"]
n2 -> n0[style="solid"][color="black"][arrowhead="none"]
n2 -> n1[style="solid"][color="black"][arrowhead="none"]}
