src/snapshots/transmute__parser__tests__protected_struct_in_while_expression.snap
---
source: src/parser.rs
expression: "Parser::new(Lexer::new(\"while (Struct {}) {}\")).parse()"
---
Ok(
    Ast {
        identifiers: [
            "Struct",
        ],
        identifier_refs: [
            IdentifierRef {
                id: IdentRefId(0),
                ident: Identifier {
                    id: IdentId(0),
                    span: 1:8; [7, 13],
                    bound: Unbound,
                },
            },
        ],
        expressions: [
            Expression {
                id: ExprId(0),
                kind: StructInstantiation(
                    IdentRefId(0),
                    [],
                ),
                span: 1:7; [6, 17],
                typed: Untyped,
            },
            Expression {
                id: ExprId(1),
                kind: Block(
                    [],
                ),
                span: 1:19; [18, 20],
                typed: Untyped,
            },
            Expression {
                id: ExprId(2),
                kind: While(
                    ExprId(0),
                    ExprId(1),
                ),
                span: 1:1; [0, 20],
                typed: Untyped,
            },
        ],
        statements: [
            Statement {
                id: StmtId(0),
                kind: Expression(
                    ExprId(2),
                ),
                span: 1:1; [0, 20],
            },
        ],
        root: [
            StmtId(0),
        ],
        symbols: [],
        types: [],
        state: Raw,
    },
)
